# auctioneer-rust

./: .env  Cargo.toml  README.md  docker-compose.yml  init.sql
src/: db.rs  error_handler.rs  main.rs  schema.rs
src/companies/: model.rs
