[package]
name = "auctioneer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
env_logger = "0.10.0"
lazy_static = "1.4"
listenfd = "1.0.1"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.4.1", features = ["serde", "v4"] }